--- a/public_html/index.html
+++ b/public_html/index.html
@@ -819,7 +819,7 @@ window.addEventListener("resize", () => {
                 <div class="contact-card">
                     <i class="fas fa-envelope"></i>
                     <h5>Email</h5>
-                    <a href="manikumar96462@gmail.com">manikumar96462@gmail.com</a>
+                    <a href="mailto:manikumar96462@gmail.com">manikumar96462@gmail.com</a>
                 </div>
             </div>
         </div>
