UPDATED MAIN PIC

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -86,7 +86,7 @@
 
             </div>   
             <div class="img-holder">
-                <img src="assets/imgs/man.svg" alt="">
+                <img src="assets/imgs/mani_resized.svg" alt="">
             </div>  
              
                       
