--- a/public_html/temp.html
+++ b/public_html/temp.html
@@ -1,63 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manikumar | RPA & ML Developer</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: linear-gradient(to right, #141e30, #243b55);
-            color: white;
+<div class="moving-text">
+    <span>🚀 Welcome to my Portfolio! Check out my latest projects! 🚀</span>
+</div>
+
+<style>
+    .moving-text {
+        white-space: nowrap;
+        overflow: hidden;
+        display: block;
+        position: relative;
+        width: 100%;
+        background: #007bff;
+        color: white;
+        font-size: 18px;
+        padding: 10px 0;
+    }
+
+    .moving-text span {
+        display: inline-block;
+        position: absolute;
+        animation: moveText 10s linear infinite;
+    }
+
+    @keyframes moveText {
+        from {
+            left: 100%;
         }
-        .header {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            padding: 50px 20px;
+        to {
+            left: -100%;
         }
-        .header h1 {
-            font-size: 3rem;
-            font-weight: bold;
-        }
-        .header p {
-            font-size: 1.5rem;
-        }
-        .social-icons {
-            margin-bottom: 20px;
-        }
-        .social-icons a {
-            color: white;
-            font-size: 2rem;
-            margin: 0 15px;
-            transition: transform 0.3s;
-        }
-        .social-icons a:hover {
-            transform: scale(1.2);
-        }
-        .btn-dark {
-            font-size: 1.2rem;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-    </style>
-</head>
-<body>
-    <header class="header">
-        <h1>Manikumar</h1>
-        <p>RPA & ML Developer</p>
-        <div class="social-icons">
-            <a href="https://www.linkedin.com/in/manikumar-modala" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://apna.co/modala-nemali-manikumar-6btway4" target="_blank"><i class="fas fa-briefcase"></i></a>
-            <a href="https://github.com/mani3159" target="_blank"><i class="fab fa-github"></i></a>
-        </div>
-        <button class="btn btn-dark" onclick="window.open('https://drive.google.com/file/d/1hJEL5LhtmPrIIk-_JNwqONr4_R0vV_LF/view?usp=sharing', '_blank')">
-            <i class="fas fa-download"></i> DOWNLOAD CV
-        </button>
-    </header>
-</body>
-</html>
+    }
+</style>
