--- a/public_html/index.html
+++ b/public_html/index.html
@@ -205,7 +205,7 @@
 
             </div>   
             <div class="img-holder">
-                <img src="assets/imgs/mani_resized.svg" alt="">
+                <img src="assets/imgs/mani_resized.svg" alt="" title="Manikumar" class="Tooltip">
             </div>  
              
                       
@@ -222,7 +222,7 @@
         <div class="container mt-5">
             <div class="row text-center text-md-left">
                 <div class="col-md-3">
-                    <img src="assets/imgs/mani.jpg" alt="" class="img-thumbnail mb-4">
+                    <img src="assets/imgs/mani.jpg" alt="" class="img-thumbnail mb-4" title="Manikumar">
                 </div>
                 <div class="pl-md-4 col-md-9">
                     <h6 class="title">Manikumar</h6>
