--- a/public_html/index.html
+++ b/public_html/index.html
@@ -3,10 +3,9 @@
 <head>
 	<meta charset="utf-8">
     
-    <meta name="description" content="Start your development with Steller landing page.">
-    <meta name="author" content="Devcrud">
+    <meta name="description" content="My Portfolio">
+    <meta name="author" content="Manikumar">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Steller Landing page | Free Bootstrap 4.1 landing page</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Steller main styles -->
