--- a/public_html/index.html
+++ b/public_html/index.html
@@ -457,7 +457,7 @@
                     <div class="custom-card card border">
                         <div class="card-body">
                             <i class="icon ti-settings"></i>  <!-- Icon for automation -->
-                            <h5>Process Automation & Workflow Optimization</h5>
+                            <h5>Backend Development & API building</h5>
                         </div>
                     </div>
                 </div>
@@ -544,6 +544,12 @@
                     <h6 class="mb-3">HTML,CSS and Bootstrap</h6>
                     <div class="progress">
                         <div class="progress-bar bg-primary" role="progressbar" style="width: 62%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span>40%</span></div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <h6 class="mb-3">REST API</h6>
+                    <div class="progress">
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 62%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span>75%</span></div>
                     </div>
                 </div>
             </div>  
