--- a/public_html/index.html
+++ b/public_html/index.html
@@ -284,7 +284,7 @@
         <div class="container mt-5">
             <div class="row text-center text-md-left">
                 <div class="col-md-3">
-                    <img src="assets/imgs/mani.jpg" alt="" class="img-thumbnail mb-4" title="Manikumar">
+                    <img src="./assets/imgs/mani.jpeg" alt="" class="img-thumbnail mb-4" title="Manikumar">
                 </div>
                 <div class="pl-md-4 col-md-9">
                     <h6 class="title">Manikumar</h6>
