--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,6 +11,7 @@
     <!-- Bootstrap + Steller main styles -->
 	<link rel="stylesheet" href="assets/css/steller.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/themify-icons/0.1.2/css/themify-icons.css">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <style>
         .hidden {
     opacity: 0;
@@ -102,6 +103,13 @@
     </script>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
+<!-- Save this as favicon.svg -->
+<svg xmlns="http://www.w3.org/2000/svg" width="64" height="64">
+  <rect width="100%" height="100%" fill="#1E90FF" />
+  <text x="50%" y="55%" font-size="26" font-family="Arial, sans-serif" fill="white" text-anchor="middle" alignment-baseline="middle">
+    MK🎓
+  </text>
+</svg>
 
     <div class="loader-overlay" id="loader">
   <div class="emoji">🎓📚🧑‍🎓</div>
@@ -288,7 +296,7 @@
                 </div>
                 <div class="pl-md-4 col-md-9">
                     <h6 class="title">Manikumar</h6>
-                    <p class="subtitle">RPA&ML Developer</p>
+                    <p class="subtitle">Python Developer</p>
                     <p>Aspiring Machine Learning Individual with Expertise in Robotic Process Automation, Seeking a Role in a
                         Professional Environment to Utilize and Enhance My Skills, Contributing to the Organization’s Vision.</p>
                     <p>Passionate about automation, artificial intelligence, and data-driven solutions, I am eager to contribute innovative ideas that align with the organization's vision. With a keen interest in problem-solving and optimizing workflows through intelligent automation, I aim to drive efficiency and technological advancement in a collaborative setting.</p>
